# IdleOnDoge

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pre-commit.sh  pyproject.toml
src/: app.py  config.py  helper.py  process_data.py  query_data_toolbox.py
